[package]
name = "disco-monk"
version = "0.1.0"
authors = ["xipi2048 <raen@quantumtrip.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.22"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
features = [
  "builder",
  #"cache",
  "framework",
  "model",
  "standard_framework", 
  "rustls_backend",
  "utils",
]